conformance/1.0.0/expected/errors/missing-space-after-pipe.cdx
<ExpectedError category=~syntax reason=~gloss-syn-missing-space-after-pipe/>
